--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
     <string name="conf_eliminar">¿Está seguro que desea eliminar este apartamento?</string>
     <string name="apartamento_eliminado">Apartamento Eliminado Exitosamente</string>
     <string name="cancelar">Cancelar</string>
+    <string name="promedio">Promedio</string>
 </resources>
