--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -32,4 +32,5 @@
     <string name="mens_1">Apartment Saved Successfully</string>
     <string name="mens_mod">Successfully Modified Apartment</string>
     <string name="modificar">Modify</string>
+    <string name="promedio">Average</string>
 </resources>
